Tweaks to colours, and fixes layout issue with stats pane.

--- a/src/main/dojo/primejunta/brikoleur/css/buttons.css
+++ b/src/main/dojo/primejunta/brikoleur/css/buttons.css
@@ -107,8 +107,8 @@
 }
 
 .br-fileControlButton {
-    border: 1px dashed #c00;
-    color: #c00;
+    border: 1px dashed #1e88e5;
+    color: #1e88e5;
     text-align: center;
     border-radius: 3px;
     padding: 8px;
