--- a/src/main/dojo/primejunta/brikoleur/css/globals.css
+++ b/src/main/dojo/primejunta/brikoleur/css/globals.css
@@ -1,6 +1,6 @@
 /* Simple globals */
 .br-blue {
-    color: #538aff;
+    color: #1e88e5;
 }
 
 .br-red {
@@ -12,7 +12,7 @@
 }
 
 .br-green {
-    color: #00cc00;
+    color: #01bd5c;
 }
 
 .br-gray {
